2006-11-??  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* pstreamFindID: check pstreamptr->name before use (bug fix)
	* Version 1.0.5 released

2006-11-06  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* processSelf: lock/unlock NumProcess (bug fix)
	* pstreamOpenRead: move mutex_unlock after cdoInqHistory
	* Version 1.0.4 released

2006-11-06  Ralf Quast  <ralf.quast@brockmann-consult.de>

	* New module: Ydrunstat (ydrun -min, -max, -sum, -mean, -avg, -qstd)
	* New module: Timpctl (tim-, hour-, day-, mon-, year- pctl)
	* New module: Selpctl (selpctl)
	* New module: Runpctl (runpctl)
	* New module: Seaspctl (seaspctl)
	* New module: Ydaypctl (ydaypctl)
	* New module: Ymonpctl (ymonpctl)
	* New module: Yseaspctl (yseaspctl)
	* New module: Ydrunpctl (ydrunpctl)
	* New operator: enspctl (Ensstat)
	* New operator: fldpctl (Fldstat)
	* New operator: zonpctl (Zonstat)
	* New operator: merpctl (Merstat)	
	
2006-11-02  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.0.3
	* New operator: intntime [request: Michael Boettinger]
	* New operator: mrotuvb [request: Helmuth Haak]
	* New operator: outputvector [request: Helmuth Haak]
	* selyear: bug fix for years > 9999 [report: Uwe Mikolajewicz]
	* inttime: extention for months and years [request: Holger Goettel]
	* outputcenter: support of zonal and meridional fields
	* zonavg: bug fix for non gaussian or non lonlat grids
	* remaplib.sort_add: don't sort if num_links <= 1
	* remaplib.remap_bi?: check that src_add is valid
	* Remap: use REMAP_NON_GLOBAL only for gridsize > 1
	* Version 1.0.3 released

2006-09-18  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.0.2
	* set alias gradsdes to gradsdes2
	* rename gradsdes to gradsdes1
	* New operator: int and nint (Math) [request: Joerg Wegner]
	* New operator: ydaysum, ymonsum, yseassum [request: Hannes Reuter]
	* add option -e exp to test DRMAA
	* add option -z szip to compress GRIB records with SZIP